--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
   <h2>🔍 Review My English Workbook – <span id="day-info"></span></h2>
   <p><strong>Goal:</strong> B1 to B2 Fluency | <strong>Focus:</strong> Listening & Speaking</p>
-  <p class="small">📅 <span id="today-date"></span></p>
+  <p class="small">🗓️ <span id="today-date"></span></p>
   <hr />
 
   <div id="task-description"></div>
@@ -116,7 +116,7 @@
   <button onclick="markComplete()">✔️ Mark This Day Complete</button>
   <button onclick="nextDay()">Next Day ➡️</button>
   <button onclick="prevDay()">⬅️ Previous Day</button>
-  <button onclick="window.print()">🖨️ Print or Save as PDF</button>
+  <button onclick="window.print()">🖰️ Print or Save as PDF</button>
 
   <script>
     const tasks = [
