--- a/index.html
+++ b/index.html
@@ -1,159 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Daily English Workbook</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <title>My English Workbook</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     body {
       font-family: sans-serif;
-      background: #ffffff;
-      color: #222;
-      margin: 0;
-      padding: 1em;
-      max-width: 100%;
+      padding: 16px;
+      max-width: 600px;
+      margin: auto;
+      background: #f8f8f8;
     }
-
     h2, h3 {
-      color: #007BFF;
-      font-size: 1.3em;
+      color: #1A73E8;
     }
-
     textarea {
       width: 100%;
-      min-height: 120px;
-      margin-bottom: 20px;
+      min-height: 100px;
       padding: 10px;
-      font-size: 1em;
-      border: 1px solid #ccc;
-      border-radius: 10px;
-      resize: vertical;
-    }
-
-    button {
-      background: #007BFF;
-      color: white;
-      border: none;
-      padding: 12px;
-      margin: 8px 4px 16px 0;
+      margin-bottom: 20px;
+      font-size: 16px;
       border-radius: 8px;
-      font-size: 1em;
-      width: 48%;
+      border: 1px solid #ccc;
+      box-sizing: border-box;
     }
-
-    button:hover {
-      background: #0056b3;
+    label {
+      font-weight: bold;
+      display: block;
+      margin-bottom: 6px;
+      margin-top: 16px;
     }
-
-    .row {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 8px;
+    .subtext {
+      font-size: 14px;
+      color: #666;
+      margin-bottom: 6px;
     }
-
-    .small {
-      font-size: 0.9em;
-      color: #555;
+    pre {
+      background: #fff;
+      padding: 12px;
+      border: 1px dashed #ccc;
+      white-space: pre-wrap;
+      font-size: 14px;
+      margin-top: 20px;
     }
   </style>
 </head>
 <body>
 
-  <h2>📘 English Workbook – <span id="day-label"></span></h2>
-  <p class="small">📅 <span id="date-label"></span></p>
-  <p id="task-info"></p>
+  <h2>📘 Daily English Workbook</h2>
+  <p><strong>Day:</strong> <span id="today-date"></span></p>
 
-  <textarea data-key="warmup" placeholder="🟢 Part 1 – Warm-Up"></textarea>
-  <textarea data-key="listening" placeholder="🟢 Part 2 – Listening Practice"></textarea>
-  <textarea data-key="speaking" placeholder="🟢 Part 3 – Speaking Practice"></textarea>
-  <textarea data-key="challenge" placeholder="🟢 Part 4 – Fun Practice Challenge"></textarea>
-  <textarea data-key="analyze" placeholder="🟢 Analyze Your Practice / Ask for Feedback"></textarea>
+  <label for="warmup">🟢 Part 1: Warm-Up</label>
+  <div class="subtext">Write 3 things you're grateful for, 3 things you want to improve, and your mood.</div>
+  <textarea id="warmup" placeholder="Example: I’m grateful for ... I want to improve ... I feel ..."></textarea>
 
-  <div class="row">
-    <button onclick="prevDay()">⬅️ Back</button>
-    <button onclick="nextDay()">Next ➡️</button>
-    <button onclick="markComplete()">✅ Done</button>
-    <button onclick="exportText()">📄 Export .txt</button>
-  </div>
+  <label for="listening">🟢 Part 2: Listening Practice</label>
+  <div class="subtext">Write the video/topic, 5 phrases you heard, a summary, and any questions.</div>
+  <textarea id="listening" placeholder="I watched... I heard... The summary is... I wonder if..."></textarea>
+
+  <label for="speaking">🟢 Part 3: Speaking Practice</label>
+  <div class="subtext">Write today’s topic, what you said, and if it was difficult.</div>
+  <textarea id="speaking" placeholder="I spoke about... It was (not) hard because..."></textarea>
+
+  <label for="fun">🟢 Part 4: Fun Challenge</label>
+  <div class="subtext">Write the type of challenge, your answer, and any words you struggled with.</div>
+  <textarea id="fun" placeholder="Today I tried... It was... The hard words were..."></textarea>
+
+  <h3>🧠 Prompt to Copy for Feedback (AI)</h3>
+  <pre id="feedback-prompt">
+Please analyze my English workbook answers below.
+
+1. Check and correct all grammar, word choice, and fluency issues in each part.
+2. Give the corrected version + explanation.
+3. Tell me how I can improve next time.
+
+--- Warm-Up ---
+[Paste Part 1 here]
+
+--- Listening Practice ---
+[Paste Part 2 here]
+
+--- Speaking Practice ---
+[Paste Part 3 here]
+
+--- Fun Challenge ---
+[Paste Part 4 here]
+
+Be specific and help me become fluent.
+  </pre>
+
+  <h3>📘 Prompt for Practice Workbook from My Mistakes</h3>
+  <pre id="workbook-prompt">
+Based on my mistakes today, create personalized practice exercises like:
+
+- Fill in the blanks
+- Grammar rewrites
+- Error spotting
+
+Make it clear and helpful. Use my exact mistakes to test me.
+  </pre>
 
   <script>
-    const tasks = [
-      { title: "Day 1: Self-Reflection", desc: "Write about your day in English." },
-      { title: "Day 2: TED Talk Shadowing", desc: "Repeat a native speaker from a video." },
-      { title: "Day 3: Describe Your Room", desc: "Practice describing objects around you." },
-      { title: "Day 4: Dialogue Simulation", desc: "Repeat both parts of a short dialogue." },
-      { title: "Day 5: Story Retelling", desc: "Watch and retell a short story." },
-      // ... Add more up to Day 30
-    ];
+    document.getElementById('today-date').textContent = new Date().toDateString();
 
-    let currentDay = parseInt(localStorage.getItem('mobileCurrentDay') || '1');
-    let completed = JSON.parse(localStorage.getItem('mobileCompleted') || '[]');
-
-    function loadDay() {
-      if (currentDay < 1) currentDay = 1;
-      if (currentDay > tasks.length) currentDay = tasks.length;
-
-      document.getElementById("day-label").innerText = `Day ${currentDay}`;
-      document.getElementById("date-label").innerText = new Date().toDateString();
-
-      const task = tasks[currentDay - 1] || { title: "Day", desc: "Custom Task" };
-      document.getElementById("task-info").innerHTML = `<strong>${task.title}</strong>: ${task.desc}`;
-
-      document.querySelectorAll("textarea").forEach(textarea => {
-        const key = `m-day${currentDay}-${textarea.dataset.key}`;
-        textarea.value = localStorage.getItem(key) || "";
-        textarea.oninput = () => localStorage.setItem(key, textarea.value);
+    const fields = ['warmup', 'listening', 'speaking', 'fun'];
+    fields.forEach(field => {
+      const el = document.getElementById(field);
+      el.value = localStorage.getItem(field) || '';
+      el.addEventListener('input', () => {
+        localStorage.setItem(field, el.value);
       });
-
-      localStorage.setItem('mobileCurrentDay', currentDay);
-    }
-
-    function prevDay() {
-      if (currentDay > 1) {
-        currentDay--;
-        loadDay();
-      }
-    }
-
-    function nextDay() {
-      if (!completed.includes(currentDay)) {
-        alert("✔️ Please mark the day as done before continuing.");
-        return;
-      }
-      if (currentDay < tasks.length) {
-        currentDay++;
-        loadDay();
-      }
-    }
-
-    function markComplete() {
-      if (!completed.includes(currentDay)) {
-        completed.push(currentDay);
-        localStorage.setItem('mobileCompleted', JSON.stringify(completed));
-        alert("🎉 Day marked as done!");
-      }
-    }
-
-    function exportText() {
-      const sections = document.querySelectorAll("textarea");
-      let content = `📘 English Practice – Day ${currentDay}\n${new Date().toDateString()}\n\n`;
-
-      sections.forEach(area => {
-        const label = area.placeholder;
-        content += `🔹 ${label}\n${area.value.trim() || '[Empty]'}\n\n`;
-      });
-
-      const blob = new Blob([content], { type: "text/plain" });
-      const link = document.createElement("a");
-      link.href = URL.createObjectURL(blob);
-      link.download = `english-day${currentDay}.txt`;
-      link.click();
-    }
-
-    loadDay();
+    });
   </script>
+
 </body>
 </html>
+
 
 
 
